2003-12-17  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.2-cvs-b63

	* Updated gallery_remote2.php to add support for anonymous login.
	* Also added some trivial debugging.

2003-12-10 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b62

	* Bugfix: Corrected Alignment.

2003-12-09 Andrew Lindeman  <joyoflinux@yahoo.com> 1.4.2-cvs-b61

	* Added framework (and a few working links) for context
	  sensitive help

2003-12-09 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b60

	* Change: Some rtl stuff in config and core.

	* Change: added missing closing </td>.

	* Change: removed debug code.

2003-12-09  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b59
	
	* Undo "Christian"'s (??!!) accidental commit.

2003-12-09  Christian Mohn  <ch-moh@online.no> 1.4.2-cvs-b58
	* Bugfix: Missing quote in publish_xp.
	  Removed warning due to missing 5th parameter to appendNestedAlbums.
	  This fixes bug: 853856
	  Thanks to Cybertech for reporting

2003-12-09  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b57

	* Fixed bug (by reverting to code from -b30 in util.php), so that 
	  you can delete comments.  Jens will have to revisit this as I can't
	  see what he wanted to achieve by the change.
	  (Thanks to h0bbel for his discovery and analysis of this bug)

2003-12-08  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b56

	* Switched off ghcc before we get bitten by security problems.

	* Type in util.php (thanks to h0bbel)

2003-12-08  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b55

	* Added first draft of alindeman's Gallery Host Compatibility Checker

2003-12-06  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b54

	* Fixed bug where rotated images don't have their size updated if 
	  there is no "sized" image.

2003-12-05 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b53

	* Bugfix: Avoid warning and resulting crash in publish_xp.php 
		  when $HTTP_SERVER_VARS["HTTPS"] is not set.
		  (H0bbel caught it.)

	* Change: Typo in config.
