@@ -32,7 +32,14 @@ if (!empty($HTTP_GET_VARS["GALLERY_BASEDIR"]) ||
 <?php if (!isset($GALLERY_BASEDIR)) {
     $GALLERY_BASEDIR = './';
 }
-require($GALLERY_BASEDIR . 'init.php'); ?>
+require($GALLERY_BASEDIR . 'init.php');
+
+// Hack check
+if (!$gallery->user->canReadAlbum($gallery->album)) {
+        print _("Security violation") ."\n";
+	return;
+}
+?>
 
 <html>
 <head>
