@@ -1,3 +1,11 @@
+2003-12-19 Andrew Lindeman  <joyoflinux@yahoo.com> 1.4.2-cvs-b64
+
+	* Removed context help framework for right now.  I will rethink this
+	  and add support in a larger chunk, probably in 1.4.3.
+	  
+	* Added a check in view_photo_properties.php to prevent unauthorized
+	  users from viewing at images through that file.
+
 2003-12-17  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.2-cvs-b63
 
 	* Updated gallery_remote2.php to add support for anonymous login.
